complet challenge 4 y process 5

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     
     <!-- <script src="/pregunta 1/index.js"></script> -->
-    <script src="/pregunta 2/index.js"></script>
+    <!-- <script src="/pregunta 2/index.js"></script> -->
     <!-- <script src="/pregunta 3/index.js"></script> -->
-
+    <!-- <script src="/pregunta 4/index.js"></script> -->
+    <script src="/pregunta 5/index.js"></script>
 </body>
 </html>
