--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     
-    <!-- <script src="/pregunta 1/index.js"></script> -->
-    <!-- <script src="/pregunta 2/index.js"></script> -->
-    <!-- <script src="/pregunta 3/index.js"></script> -->
-    <!-- <script src="/pregunta 4/index.js"></script> -->
-    <script src="/pregunta 5/index.js"></script>
+    <script src="/pregunta-1/index.js" type="module"></script> 
+    <script src="/pregunta-2/index.js" type="module"></script>
+    <script src="/pregunta-3/index.js" type="module"></script>
+    <script src="/pregunta-4/index.js" type="module"></script>
+    <script src="/pregunta-5/index.js" type="module"></script> 
+    <script src="/pregunta-6/index.js" type="module"></script>
 </body>
 </html>
